# solstice-tools-outliner

./: .travis.yml  MANIFEST.in  README.md  genindex.html  objects.inv  py-modindex.html  requirements.txt  searchindex.js  setup.cfg  solstice.html  solstice.tools.html  solstice.tools.outliner.core.html  solstice.tools.outliner.core.outliner.html  solstice.tools.outliner.html  solstice.tools.outliner.outliner.html  solstice.tools.outliner.outliners.camera.html  solstice.tools.outliner.outliners.character.html  solstice.tools.outliner.outliners.fx.html  solstice.tools.outliner.outliners.html  solstice.tools.outliner.outliners.light.html  solstice.tools.outliner.outliners.prop.html  solstice.tools.outliner.widgets.html  solstice.tools.outliner.widgets.outliner.html
_sources/: solstice.tools.outliner.core.outliner.rst.txt  solstice.tools.outliner.core.rst.txt  solstice.tools.outliner.outliner.rst.txt  solstice.tools.outliner.outliners.camera.rst.txt  solstice.tools.outliner.outliners.character.rst.txt  solstice.tools.outliner.outliners.fx.rst.txt  solstice.tools.outliner.outliners.light.rst.txt  solstice.tools.outliner.outliners.prop.rst.txt  solstice.tools.outliner.outliners.rst.txt  solstice.tools.outliner.rst.txt  solstice.tools.outliner.widgets.outliner.rst.txt  solstice.tools.outliner.widgets.rst.txt  solstice.tools.rst.txt
source/solstice/tools/outliner/: __init__.py  __logging__.ini  outliner.py
source/solstice/tools/outliner/items/: base.py
source/solstice/tools/outliner/outliners/: assetsoutliner.py  cameraoutliner.py  fxoutliner.py  (+2 more)
tests/: test_general.py
(+1 files in other folders)
