[metadata]
name = solstice-tools-outliner
description = Tool to manage assets in DCC scenes for Solstice
long_description = file: README.rst
long_description_content_type = text/x-rst
version = 0.0.1
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/Solstice-Short-Film/solstice-tools-outliner

[options]
zip_safe = false
include_package_data = true
package_dir=
    =source
packages=find:
install_requires=
    artellapipe-tools-outliner

[options.packages.find]
where=source

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1